# iot-playground

./: .gitignore  AGENTS.md  Cargo.toml  Embed.toml  README.md  embed.sh
.cargo/: config.toml
.github/workflows/: ci.yaml  deploy-docs.yml  size-comparison.yaml
boards/feather-stm32f405/: Cargo.toml  Embed.toml
boards/feather-stm32f405/docker/: Dockerfile  README.md  mosquitto.conf
boards/feather-stm32f405/src/: device_id.rs  eth.rs
boards/feather-stm32f405/src/network/: client.rs  config.rs  mod.rs  mqtt.rs  socket.rs
boards/feather-stm32f405/src/time/: mod.rs
core/: Cargo.toml
core/src/: lib.rs
docs/: book.toml
docs/src/: README.md  SUMMARY.md  risk_register.md  roadmap.md  system_requirements.md
docs/src/architecture/: decisions.md
docs/src/development/: testing.md
feather-stm32f405/: CUSTOM_TIME_LIMITATIONS.md  Cargo.toml  Embed.toml  SIZE_COMPARISON.md  memory.x  spec.md
feather-stm32f405/.cargo/: config.toml
feather-stm32f405/docker/: start-mosquitto.sh
feather-stm32f405/docs/: book.toml
feather-stm32f405/docs/src/: system_requirements.md
feather-stm32f405/src/: ccmram.rs  device_id.rs  eth.rs  main.rs  net.rs  network.rs  time.rs  time_chrono.rs  tls.rs  tls_buffers.rs
feather-stm32f405/src/net/: mod.rs  udp.rs
feather-stm32f405/src/network/: error.rs  manager.rs  mod.rs  mqtt.rs  sntp.rs  tls.rs
feather-stm32f405/src/time/: calendar.rs  mod.rs  rtc.rs  sntp.rs
hal-abstractions/: Cargo.toml
hal-abstractions/src/: lib.rs
microbit/: Cargo.toml  Embed.toml  memory.x
microbit/.cargo/: config.toml
microbit/src/: main.rs
stm32f3-discovery/: Cargo.toml  Embed.toml
stm32f3-discovery/.cargo/: config.toml
stm32f3-discovery/src/: main.rs
