[package]
name = "feather-stm32f405"
version = "0.1.0"
edition = "2021"
readme = "README.md"

[workspace]

# this lets you use `cargo fix`!
[[bin]]
bench = false
name = "feather-stm32f405"
test = false

[dependencies]
defmt = "1.0.1"
defmt-rtt = "1.1.0"
embedded-hal = "0.2.7"
heapless = "0.8"

[dependencies.cortex-m]
version = "0.7.7"
features = [
  "critical-section-single-core",
]

[dependencies.embassy-stm32]
version = "0.4.0"
default-features = false
features = [
  "defmt",
  "stm32f405rg",
]

# NOTE: Replace with rustls-wolfcrypt-provider for FIPS 140-3 compliance
[dependencies.embedded-tls]
version = "0.17"
default-features = false

[dependencies.panic-probe]
version = "1.0.0"
features = ["print-defmt"]

[dependencies.rtic]
git = "https://github.com/rtic-rs/rtic.git"
tag = "v2.2.0"
features = ["thumbv7-backend"]

[dependencies.rtic-monotonics]
git = "https://github.com/rtic-rs/rtic.git"
tag = "v2.2.0"
features = [
  "defmt",
  "stm32_tim2",
  "stm32_tim3",
  "stm32_tim4",
  "stm32f405rg",
]

[dependencies.rtic-time]
git = "https://github.com/rtic-rs/rtic.git"
tag = "v2.2.0"

[dependencies.smoltcp]
version = "0.12"
default-features = false
features = [
  "async",
  "defmt",
  "proto-ipv4",
  "socket-dhcpv4",
  "socket-tcp",
]

[dependencies.stm32-metapac]
version = "18.0.0"
features = [
  "defmt",
  "rt",
  "stm32f405rg",
]

[dependencies.w5500-hl]
version = "0.12"
default-features = false
features = ["defmt"]

[profile.dev]
opt-level = 1
debug = true
lto = false
panic = "abort"
codegen-units = 16

[profile.release]
opt-level = "s"    # optimize for size
debug = true       # symbols are nice and they don't increase the size on Flash
lto = true         # better optimizations
codegen-units = 1  # better optimizations
