[package]
name = "feather-stm32f405"
version = "0.1.0"
edition = "2021"
readme = "README.md"

[workspace]

# this lets you use `cargo fix`!
[[bin]]
bench = false
name = "feather-stm32f405"
test = false

[dependencies]
defmt = "1.0.1"
defmt-rtt = "1.1.0"
embedded-hal = "1.0"
embedded-hal-async = "1.0"
embedded-io-async = "0.6"
heapless = "0.8"
static_cell = "2.0"

[dependencies.cortex-m]
version = "0.7.7"
features = [
  "critical-section-single-core",
]

[dependencies.critical-section]
version = "1.1"

[dependencies.embassy-embedded-hal]
version = "0.5.0"
features = ["defmt"]

[dependencies.embassy-futures]
version = "0.1"  # Latest stable is 0.1.x

[dependencies.embassy-net]
version = "0.7.1"
features = [
  "defmt",
  "dhcpv4",
  "dns",
  "medium-ethernet",
  "tcp",
  "udp",
]

[dependencies.embassy-net-wiznet]
version = "0.2"
features = ["defmt"]

[dependencies.embassy-stm32]
version = "0.4.0"
default-features = false
features = [
  "defmt",
  "exti",
  "rt",                   # Required for NVIC_PRIO_BITS
  "stm32f405rg",
  "time-driver-any",      # Provides embassy-time driver for embassy components
  "unstable-pac",
]

[dependencies.embassy-sync]
version = "0.7.0"
features = ["defmt"]

[dependencies.embassy-time]
version = "0.5.0"
features = [
  "defmt",
  "defmt-timestamp-uptime",  # Use embassy-time uptime for defmt timestamps
  "generic-queue-16",
]

# NOTE: Replace with rustls-wolfcrypt-provider for FIPS 140-3 compliance
[dependencies.embedded-tls]
version = "0.17"
default-features = false

[dependencies.panic-probe]
version = "1.0.0"
features = ["print-defmt"]

[dependencies.rtic]
git = "https://github.com/rtic-rs/rtic.git"
tag = "v2.2.0"
features = ["thumbv7-backend"]

[dependencies.rtic-monotonics]
git = "https://github.com/rtic-rs/rtic.git"
tag = "v2.2.0"
features = [
  "cortex-m-systick",
  "defmt",
]

[dependencies.rtic-time]
git = "https://github.com/rtic-rs/rtic.git"
tag = "v2.2.0"

# SNTP client for time synchronization (SR-NET-006)
# Version 0.7.0 adds async support
[dependencies.sntpc]
version = "0.7.0"
default-features = false

[dependencies.stm32-metapac]
version = "18.0.0"
features = [
  "defmt",
  "rt",
  "stm32f405rg",
]

[profile.dev]
opt-level = 1
debug = true
lto = false
panic = "abort"
codegen-units = 16

[profile.release]
opt-level = "s"    # optimize for size
debug = true       # symbols are nice and they don't increase the size on Flash
lto = true         # better optimizations
codegen-units = 1  # better optimizations
