[package]
name = "feather-stm32f405"
version.workspace = true
edition.workspace = true
readme = "README.md"

# this lets you use `cargo fix`!
[[bin]]
bench = false
name = "feather-stm32f405"
test = false

[dependencies]
defmt.workspace = true
defmt-rtt.workspace = true
embedded-hal.workspace = true
embedded-hal-async.workspace = true
embedded-io.workspace = true
embedded-io-async.workspace = true
heapless.workspace = true
static_cell.workspace = true
cortex-m.workspace = true
critical-section.workspace = true
panic-probe.workspace = true

[dependencies.embassy-embedded-hal]
workspace = true
features = ["defmt"]

[dependencies.embassy-futures]
workspace = true

[dependencies.embassy-net]
workspace = true
features = [
  "defmt",
  "dhcpv4",
  "dns",
  "medium-ethernet",
  "tcp",
  "udp",
]

[dependencies.embassy-net-wiznet]
workspace = true
features = ["defmt"]

[dependencies.embassy-stm32]
workspace = true
features = [
  "defmt",
  "exti",
  "rt",                   # Required for NVIC_PRIO_BITS
  "stm32f405rg",
  "time-driver-any",      # Provides embassy-time driver for embassy components
  "unstable-pac",
]

[dependencies.embassy-sync]
workspace = true
features = ["defmt"]
# Note: Required by embassy-embedded-hal for SPI bus sharing within network task
# Uses lightweight CriticalSection-based mutex that doesn't prevent WFI sleep

[dependencies.embassy-time]
workspace = true
features = [
  "defmt",
  "defmt-timestamp-uptime",
  "generic-queue-16",
]

# NOTE: Replace with rustls-wolfcrypt-provider for FIPS 140-3 compliance
# Using latest main branch which includes embedded-io-async 0.7 compatibility
[dependencies.embedded-tls]
git = "https://github.com/drogue-iot/embedded-tls"
rev = "4bc3df1dffccb318a564ef4c258c3a82c2eb13ed"
default-features = false
features = ["defmt"]

# RNG for TLS handshake (version must match embedded-tls dependency)
[dependencies.rand_core]
version = "0.6"
default-features = false

# MQTT v5.0 client for Phase 2 network stack
[dependencies.rust-mqtt]
git = "https://github.com/obabec/rust-mqtt.git"
rev = "d8d470bd4f03ed2b303af83d3dbfb8b3854c8302"
default-features = false
features = ["v5", "defmt", "bump"]

[dependencies.rtic]
workspace = true
features = ["thumbv7-backend"]

[dependencies.rtic-monotonics]
workspace = true
features = [
  "cortex-m-systick",
  "defmt",
  "stm32_tim2",
  "stm32f405rg",
]

[dependencies.rtic-sync]
workspace = true
features = ["defmt-03"]

[dependencies.rtic-time]
workspace = true

# SNTP client for time synchronization (SR-NET-006)
# Version 0.7.0 adds async support
[dependencies.sntpc]
version = "0.7.0"
default-features = false

[dependencies.stm32-metapac]
version = "18.0.0"
features = [
  "defmt",
  "rt",
  "stm32f405rg",
]
